- Configurable DCI summary tables
- Default background color for new network maps made configurable
- Logged in users cannot be deleted
- Empty containters have "Normal" status instead of "Unknown"
- New NXSL functions: AgentReadTable, DeleteObject, GetDCIRawValue
- Map objects can have status calculated from contained objects' status
- SNMP trap listener port now configurable
- Management console:
	- Simplified table DCI configuration
	- Charts can be created from table data
	- Severity filter in dashboard element "Alarm Viewer"
	- Zoom level can be configured for "Network Map" dashboard elements
	- Values of custom attributes can be used in object tools
	- Vertical orientation for dial chart elements
- Web UI:
	- Single sign-on support using CAS
	- Configuration file nxmc.properties can be placed outside of war file
	- Workbench layout and user preferences saved between sessions
- Fixed issues: #57, #58, #195, #198, #262, #277, #281, #284, #286, #291, #293


*
* 1.2.7
*

- Simplified configuration of DCIs based on Windows performance counters
- Basic software inventory
- Network discovery improved
- Status of zone's proxy node now used in "node down" event correlation
- Configurable default DCI retention time and polling interval
- New NXSL functions: CreateNode, GetSumDCIValue
- New NXSL operator @ - safe get object's attribute
- New MIBs added: ASTARO-MIB, CPQHOST-MIB, CPQPOWER-MIB
- Special support for wireless switches
- Driver for Motorola/Symbol wireless switches
- Fixed bugs in template export/import
- Database manager: Fixed bugs in database export
- New parameters for Windows Security Center provided by WMI subagent:
	System.AntiSpywareProduct.Active
	System.AntiSpywareProduct.DisplayName
	System.AntiSpywareProduct.UpToDate
	System.AntiVirusProduct.Active
	System.AntiVirusProduct.DisplayName
	System.AntiVirusProduct.UpToDate
	System.FirewallProduct.Active
	System.FirewallProduct.DisplayName
	System.FirewallProduct.UpToDate
- Management console: