@@ -1,3 +1,0 @@
-MasterServers = 172.23.170.20
-LogFile = {syslog}
-FileStore = /tmp
