@@ -14,6 +14,7 @@
 - New NXSL functions: AgentReadTable, DeleteObject, GetDCIRawValue
 - Map objects can have status calculated from contained objects' status
 - SNMP trap listener port now configurable
+- HP-UX agent improved
 - Management console:
 	- Simplified table DCI configuration
 	- Charts can be created from table data
